Fix hidden scrollbars taking up space on Chromium browsers

--- a/src/styles/_fileSystemView.scss
+++ b/src/styles/_fileSystemView.scss
@@ -1,7 +1,7 @@
 .file-system-view-container {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding: 1px;
   display: flex;
   flex-direction: column;
